主要学习了主流工具开发：文件操作、联网搜索、网页抓起、终端操作、资源下载、PDF 生成、集中注册、使用工具以及测试使用工具的流程。
第七期：MCP 协议

1.SPRING AI MCP 开发模式

1.MCP 客户端开发

1. 首先引入依赖：

Spring AI 提供的 spring-ai-starter-mcp-client ：核心启动器，提供了 stdio 模式和基于 HTTP 的 SSE 支持的模式；

<dependency>
<groupId>org.springframework.ai</groupId>
<artifactId>spring-ai-mcp-client-spring-boot-starter</artifactId>
</dependency>

2. 然后写配置文件，保证可以同时支持 stdio 和 SSE 的连接方式

spring:
ai:
mcp:
client:
enabled: true
name: my-mcp-client
version: 1.0.0
request-timeout: 30s
type: SYNC
sse:
connections:
server1:
url: http://localhost:8080
stdio:
connections:
server1:
command: /path/to/server
args:
- --port=8080
env:
API_KEY: your-api-key

2.MCP 开发实战 - 图片搜索服务

1.先基于 PEXELS 图片资源网站拿到 API，保证图片搜索服务可以正常搜索图片；

2.引入依赖，主要是 SPRING AI MCP 服务端依赖，有 STDIO、WEBMVC SSE 和 WEBFLUX SSE 三种，选择 WEBMVC：

<dependency>
<groupId>org.springframework.ai</groupId>
<artifactId>spring-ai-mcp-server-webmvc-spring-boot-starter</artifactId>
<version>1.0.0-M6</version>
</dependency>

3.引入三种配置文件，分别是 APPLICATION-STDIO.YML、APPLICATION-SSE.YML 和主配置文件 APPLICATION.YML（目的是指定激活其中一套配置）：

stdio 配置文件：

spring:
ai:
mcp:
server:
name: yu-image-search-mcp-server
version: 0.0.1
type: SYNC
# stdio
stdio: true
# stdio
main:
web-application-type: none
banner-mode: off

sse 配置文件：

spring:
ai:
mcp:
server:
name: yu-image-search-mcp-server
version: 0.0.1
type: SYNC
# sse
stdio: false

主配置文件：

spring:
application:
name: yu-image-search-mcp-server
profiles:
active: stdio
server:
port: 8127

4.编写图片搜索服务类

在 tools 包下新建 ImageSearchTool，要加上@Tool 注解保证可以作为 MCP 服务提供的工具：

@Service // 加入@Service目的是管理这个Bean
public class ImageSearchTool {

// 替换为自己的 Pexels API密钥
private static final String API_KEY = "自己的API";

// Pexels 常规搜索接口
private static final String API_URL = "https://api.pexels.com/v1/search";

// 图片搜索的工具方法：调用其余的方法
@Tool(description = "search image from web")
public String searchImage(@ToolParam(description = "Search query keyword") String query) {
try {
return String.join(",", searchMediumImages(query));
} catch (Exception e) {
